--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,9 @@
-name: "build-test"
+name: "Continous Integration"
 on: # rebuild any PRs and main branch changes
   pull_request:
   push:
     branches:
       - master
-      - 'releases/*'
 
 jobs:
   build: # make sure build/ci work properly
