--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,9 @@
-name: "build-test"
+name: "Test"
 on: # rebuild any PRs and main branch changes
   pull_request:
   push:
     branches:
       - master
-      - 'releases/*'
 
 jobs:
   build: # make sure build/ci work properly
@@ -14,7 +13,7 @@ jobs:
     - run: |
         npm install
         npm run all
-  test: # make sure the action works on a clean machine without building
+  test: # test action with default arguments
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
