--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - npm publish --tag '${{ github.ref }}'
+      - npm publish --tag '$GITHUB_REF'
 
 # Unpublish deleted releases
 on: 
@@ -26,4 +26,4 @@ jobs:
   unpublish:
     runs-on: ubuntu-latest
     steps:
-      - npm unpublish '@augustohp/action-pr-assignee@${{ github.ref }}'
+      - npm unpublish '@augustohp/action-pr-assignee@$GITHUB_REF'
